# mitsubishi_arm

./: README.md
arm_camera_calibration/: CMakeLists.txt~  package.xml  package.xml~
arm_camera_calibration/launch/: arm_camera_calibration.launch  arm_camera_calibration.launch~
arm_camera_calibration/src/: arm_camera_calibration.cpp
mitsubishi_arm/mitsubishi_arm_config/: CMakeLists.txt
mitsubishi_arm/mitsubishi_arm_config/config/: fake_controllers.yaml  joint_limits_gazebo.yaml  ompl_planning.yaml
mitsubishi_arm/mitsubishi_arm_config/launch/: fake_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context_gazebo.launch  setup_assistant.launch
mitsubishi_arm/mitsubishi_arm_control/config/: mitsubishi_arm_control_gazebo.yaml
mitsubishi_arm/mitsubishi_arm_description/rviz/: urdf.rviz
mitsubishi_arm/mitsubishi_arm_description/urdf/: sensors.urdf.xacro
mitsubishi_arm/mitsubishi_arm_gazebo/launch/: mitsubishi_arm_world.launch
mitsubishi_arm/mitsubishi_arm_hardware_interface/: CMakeLists.txt
mitsubishi_arm/mitsubishi_arm_hardware_interface/scripts/: mitsubishi_spawner.py  writeJointActionClientTestNew.py  writePos.py
mitsubishi_arm/mitsubishi_arm_hardware_interface/src/: Robot.cpp  jointTrajectoryActionClient.cpp
mitsubishi_arm/mitsubishi_arm_move/launch/: static_environment.launch
mitsubishi_arm/mitsubishi_arm_move/src/: test.cpp
mitsubishi_arm_config/: .setup_assistant  package.xml
mitsubishi_arm_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mitsubishi_and_barret.srdf  mitsubishi_arm.srdf  ompl_planning.yaml
mitsubishi_arm_config/launch/: default_warehouse_db.launch  demo.launch  mitsubishi_arm_moveit_controller_manager.launch  mitsubishi_arm_moveit_controller_manager.launch.xml  move_group.launch  move_group_gazebo.launch  moveit.launch  moveit.rviz  moveit_gazebo.launch  moveit_rviz.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
mitsubishi_arm_control/: CMakeLists.txt  package.xml
mitsubishi_arm_control/config/: mitsubishi_arm_control.yaml  mitsubishi_arm_control_gazebo.yaml
mitsubishi_arm_control/launch/: mitsubishi_arm_control.launch  mitsubishi_arm_control_gazebo.launch
mitsubishi_arm_controller/: CMakeLists.txt  package.xml
mitsubishi_arm_controller/scripts/: writeJoint.py  writeJoint.py~  writeJointActionClientTest.py  writeJointActionServer.py  writeJointRos.py
mitsubishi_arm_description/: CMakeLists.txt  package.xml
mitsubishi_arm_description/launch/: display.launch  real.launch
mitsubishi_arm_description/robots/: mitsubishi_rv_6sdl.urdf.xacro  mitsubishi_rv_6sdl_barret.urdf.xacro  mitsubishi_rv_6sdl_gazebo.urdf.xacro
mitsubishi_arm_description/rviz/: urdf.rviz
mitsubishi_arm_description/urdf/: mitsubishi_rv_6sdl_arm.gazebo  mitsubishi_rv_6sdl_arm.urdf.xacro  mitsubishi_rv_6sdl_arm.xacro  sensors.gazebo.xacro  sensors.urdf.xacro  sensors.xacro
mitsubishi_arm_gazebo/: CMakeLists.txt  package.xml
mitsubishi_arm_gazebo/launch/: mitsubishi_arm_world.launch
mitsubishi_arm_gazebo/worlds/: coke_can.dae  mitsubishi_arm_coke.world
mitsubishi_arm_hardware_interface/: CMakeLists.txt  package.xml  setup.py
mitsubishi_arm_hardware_interface/include/mitsubishi_arm_hardware_interface/: MitsubishiArmInterface.h
mitsubishi_arm_hardware_interface/launch/: mitsubishi_arm_hardware_interface.launch
mitsubishi_arm_hardware_interface/scripts/: joint_state_publisher.py  writeJoint.py  writeJointActionClientTest.py  writeJointActionServer.py  writeJointActionServer.py_backup  writeJointRos.py  writeJointTests.py  writePos.py
mitsubishi_arm_hardware_interface/src/: MitsubishiArmInterface.cpp  MitsubishiArmInterfaceDummy.cpp  Robot.cpp
mitsubishi_arm_move/: CMakeLists.txt  package.xml
mitsubishi_arm_move/launch/: move_arm.launch  move_arm_gazebo.launch  static_environment.launch
mitsubishi_arm_move/src/: static_environment.cpp
mitsubishi_config/: .setup_assistant  CMakeLists.txt  package.xml
mitsubishi_config/config/: materials.srdf
mitsubishi_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mitsubishi_rv_6sdl_description/: CMakeLists.txt  package.xml
mitsubishi_rv_6sdl_description/launch/: display.launch
mitsubishi_rv_6sdl_description/robots/: mitsubishi_rv_6sdl_barret.urdf.xacro
mitsubishi_rv_6sdl_description/rviz/: urdf.rviz
