<?xml version="1.0"?>
<package>
  <name>mitsubishi_arm_control</name>
  <version>0.0.0</version>
  <description>The mitsubishi_arm_control package</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
