<?xml version="1.0"?>
<package>
  <name>mitsubishi_arm_gazebo</name>
  <version>0.0.0</version>
  <description>The mitsubishi_arm_gazebo package</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mitsubishi_arm_description</run_depend>
  <run_depend>mitsubishi_arm_control</run_depend> 
  <run_depend>gazebo_ros</run_depend>

  <export>
  </export>
</package>
