<?xml version="1.0"?>
<package>
  <name>mitsubishi_arm_move</name>
  <version>0.0.0</version>
  <description>The mitsubishi_arm_move package</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros</run_depend>
  <run_depend>moveit_msgs</run_depend>

  <export>
  </export>
</package>
